// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`after-close-tag.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="
      areaId &&
      canTweet
">
<ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>


@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }

=====================================output=====================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>
    @if (areaId && canTweet) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="areaId && canTweet">
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>

@if (areaId && canTweet) {
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
}

================================================================================
`;

exports[`after-close-tag.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="
      areaId &&
      canTweet
">
<ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>


@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }

=====================================output=====================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>
    @if (areaId && canTweet) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="areaId && canTweet">
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>

@if (areaId && canTweet) {
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
}

================================================================================
`;

exports[`after-close-tag.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="
      areaId &&
      canTweet
">
<ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>


@if (
      areaId &&
      canTweet
    ) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }

=====================================output=====================================
<ion-list class="timeline" appScrollItem>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <app-tweet-item></app-tweet-item>
    @if (areaId && canTweet) {
      <ion-item class="recommend-trust-up" lines="full"></ion-item>
    }
  }
</ion-list>

<ng-container *ngIf="areaId && canTweet">
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
</ng-container>

@if (areaId && canTweet) {
  <ion-item class="recommend-trust-up" lines="full"></ion-item>
}

================================================================================
`;

exports[`child.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<span>@if (test) {text}</span>
<div>@if (test) {text}</div>

<span>Foo@if(true) {bar}</span>baz

<span>@if (cond) {text} @else {other}</span>

<span>@if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {bar}</span>

<span>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</span>
<div>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</div>

<span>@for (item of items; track item) {{{item}}} @empty {none}</span>
<div>@for (item of items; track item) {{{item}}} @empty {none}</div>

<span>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</span>
<div>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</div>

<span>@if (a) {@if (b) {nested}}</span>

<span>You have {{ count }} item@if (count !== 1) { <span>s</span> }.</span>

<span class="cu-billing-ai__column__title">{{ column.title }}@if (column.graySuffix) {<span class="gray-suffix">{{ column.graySuffix }}</span>}</span>

<p [id]="labelId" class="field-label">{{ label }}@if (isRequired) {<span class="required">*</span>}</p>

<span>@if(foo) {<foo />} @else {}</span>

<span>@if(foo) {} @else { <bar /> }</span>

<custom-element>@if (cond) { <span>text</span> } @else {}</custom-element>

<span>{{ item }}@if (!last) {, }</span>

foo@if(condition){bar}

foo @if(condition){bar}

<div>@if(condition){bar}</div>

<span>@if(condition){bar}</span>

@if(condition){<span>bar</span>}

@if(condition){<span>bar</span>bam}

@if(condition){bar}bam

@if(condition){bar}<span>bam</span>

@if(condition){bar}<div>bam</div>

<div>foo@if (true){bar}bam</div>

foo @if(condition){bar}bam

foo@if(condition){bar} bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span>Foo@if (true) {bar}@else {baz}</span>

<span>Foo@if (true) {bar} @else {baz}</span>

<div>Foo@if (true) {bar}@else {baz}</div>baz

=====================================output=====================================
<span>
  @if (test) {
    text
  }
</span>
<div>
  @if (test) {
    text
  }
</div>

<span>
  Foo
  @if (true) {
    bar
  }
</span>
baz

<span>
  @if (cond) {
    text
  } @else {
    other
  }
</span>

<span>
  @if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {
    bar
  }
</span>

<span>
  @switch (color) {
    @case ("red") {
      red
    }
    @case ("blue") {
      blue
    }
    @default {
      other
    }
  }
</span>
<div>
  @switch (color) {
    @case ("red") {
      red
    }
    @case ("blue") {
      blue
    }
    @default {
      other
    }
  }
</div>

<span>
  @for (item of items; track item) {
    {{ item }}
  } @empty {
    none
  }
</span>
<div>
  @for (item of items; track item) {
    {{ item }}
  } @empty {
    none
  }
</div>

<span>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {
    loading...
  }
</span>
<div>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {
    loading...
  }
</div>

<span>
  @if (a) {
    @if (b) {
      nested
    }
  }
</span>

<span>
  You have {{ count }} item
  @if (count !== 1) {
    <span>s</span>
  }
  .
</span>

<span class="cu-billing-ai__column__title">
  {{ column.title }}
  @if (column.graySuffix) {
    <span class="gray-suffix">{{ column.graySuffix }}</span>
  }
</span>

<p [id]="labelId" class="field-label">
  {{ label }}
  @if (isRequired) {
    <span class="required">*</span>
  }
</p>

<span>
  @if (foo) {
    <foo />
  } @else {}
</span>

<span>
  @if (foo) {
  } @else {
    <bar />
  }
</span>

<custom-element>
  @if (cond) {
    <span>text</span>
  } @else {}
</custom-element>

<span>
  {{ item }}
  @if (!last) {
    ,
  }
</span>

foo
@if (condition) {
  bar
}

foo
@if (condition) {
  bar
}

<div>
  @if (condition) {
    bar
  }
</div>

<span>
  @if (condition) {
    bar
  }
</span>

@if (condition) {
  <span>bar</span>
}

@if (condition) {
  <span>bar</span>
  bam
}

@if (condition) {
  bar
}
bam

@if (condition) {
  bar
}
<span>bam</span>

@if (condition) {
  bar
}
<div>bam</div>

<div>
  foo
  @if (true) {
    bar
  }
  bam
</div>

foo
@if (condition) {
  bar
}
bam foo
@if (condition) {
  bar
}
bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span>
  Foo
  @if (true) {
    bar
  } @else {
    baz
  }
</span>

<span>
  Foo
  @if (true) {
    bar
  } @else {
    baz
  }
</span>

<div>
  Foo
  @if (true) {
    bar
  } @else {
    baz
  }
</div>
baz

================================================================================
`;

exports[`child.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<span>@if (test) {text}</span>
<div>@if (test) {text}</div>

<span>Foo@if(true) {bar}</span>baz

<span>@if (cond) {text} @else {other}</span>

<span>@if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {bar}</span>

<span>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</span>
<div>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</div>

<span>@for (item of items; track item) {{{item}}} @empty {none}</span>
<div>@for (item of items; track item) {{{item}}} @empty {none}</div>

<span>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</span>
<div>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</div>

<span>@if (a) {@if (b) {nested}}</span>

<span>You have {{ count }} item@if (count !== 1) { <span>s</span> }.</span>

<span class="cu-billing-ai__column__title">{{ column.title }}@if (column.graySuffix) {<span class="gray-suffix">{{ column.graySuffix }}</span>}</span>

<p [id]="labelId" class="field-label">{{ label }}@if (isRequired) {<span class="required">*</span>}</p>

<span>@if(foo) {<foo />} @else {}</span>

<span>@if(foo) {} @else { <bar /> }</span>

<custom-element>@if (cond) { <span>text</span> } @else {}</custom-element>

<span>{{ item }}@if (!last) {, }</span>

foo@if(condition){bar}

foo @if(condition){bar}

<div>@if(condition){bar}</div>

<span>@if(condition){bar}</span>

@if(condition){<span>bar</span>}

@if(condition){<span>bar</span>bam}

@if(condition){bar}bam

@if(condition){bar}<span>bam</span>

@if(condition){bar}<div>bam</div>

<div>foo@if (true){bar}bam</div>

foo @if(condition){bar}bam

foo@if(condition){bar} bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span>Foo@if (true) {bar}@else {baz}</span>

<span>Foo@if (true) {bar} @else {baz}</span>

<div>Foo@if (true) {bar}@else {baz}</div>baz

=====================================output=====================================
<span>
  @if (test) {text}
</span>
<div>
  @if (test) {text}
</div>

<span
  >Foo@if (true) {bar}</span
>baz

<span>
  @if (cond) {text} @else {other}
</span>

<span>
  @if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {bar}
</span>

<span>
  @switch (color) {
    @case ("red") {red}
    @case ("blue") {blue}
    @default {other}
  }
</span>
<div>
  @switch (color) {
    @case ("red") {red}
    @case ("blue") {blue}
    @default {other}
  }
</div>

<span>
  @for (item of items; track item) {{{ item }}} @empty {none}
</span>
<div>
  @for (item of items; track item) {{{ item }}} @empty {none}
</div>

<span>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {loading...}
</span>
<div>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {loading...}
</div>

<span>
  @if (a) {
    @if (b) {nested}
  }
</span>

<span
  >You have {{ count }} item@if (count !== 1) {
    <span>s</span>
  }.</span
>

<span class="cu-billing-ai__column__title"
  >{{ column.title }}@if (column.graySuffix) {
    <span class="gray-suffix">{{ column.graySuffix }}</span>
  }
</span>

<p [id]="labelId" class="field-label"
  >{{ label }}@if (isRequired) {
    <span class="required">*</span>
  }
</p>

<span>
  @if (foo) {
    <foo />
  } @else {}
</span>

<span>
  @if (foo) {
  } @else {
    <bar />
  }
</span>

<custom-element>
  @if (cond) {
    <span>text</span>
  } @else {}
</custom-element>

<span
  >{{ item }}@if (!last) {, }
</span>

foo@if (condition) {bar}

foo
@if (condition) {bar}

<div>
  @if (condition) {bar}
</div>

<span>
  @if (condition) {bar}
</span>

@if (condition) {
  <span>bar</span>
}

@if (condition) {
  <span>bar</span>bam
}

@if (condition) {bar}bam

@if (condition) {bar}
<span>bam</span>

@if (condition) {bar}
<div>bam</div>

<div
  >foo@if (true) {bar}bam</div
>

foo
@if (condition) {bar}bam foo@if (condition) {bar}
bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span
  >Foo@if (true) {bar} @else {baz}
</span>

<span
  >Foo@if (true) {bar} @else {baz}
</span>

<div
  >Foo@if (true) {bar} @else {baz}</div
>baz

================================================================================
`;

exports[`child.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<span>@if (test) {text}</span>
<div>@if (test) {text}</div>

<span>Foo@if(true) {bar}</span>baz

<span>@if (cond) {text} @else {other}</span>

<span>@if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {bar}</span>

<span>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</span>
<div>@switch (color) { @case ("red") {red} @case ("blue") {blue} @default {other}}</div>

<span>@for (item of items; track item) {{{item}}} @empty {none}</span>
<div>@for (item of items; track item) {{{item}}} @empty {none}</div>

<span>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</span>
<div>@defer (on viewport) {<heavy-cmp />} @placeholder {loading...}</div>

<span>@if (a) {@if (b) {nested}}</span>

<span>You have {{ count }} item@if (count !== 1) { <span>s</span> }.</span>

<span class="cu-billing-ai__column__title">{{ column.title }}@if (column.graySuffix) {<span class="gray-suffix">{{ column.graySuffix }}</span>}</span>

<p [id]="labelId" class="field-label">{{ label }}@if (isRequired) {<span class="required">*</span>}</p>

<span>@if(foo) {<foo />} @else {}</span>

<span>@if(foo) {} @else { <bar /> }</span>

<custom-element>@if (cond) { <span>text</span> } @else {}</custom-element>

<span>{{ item }}@if (!last) {, }</span>

foo@if(condition){bar}

foo @if(condition){bar}

<div>@if(condition){bar}</div>

<span>@if(condition){bar}</span>

@if(condition){<span>bar</span>}

@if(condition){<span>bar</span>bam}

@if(condition){bar}bam

@if(condition){bar}<span>bam</span>

@if(condition){bar}<div>bam</div>

<div>foo@if (true){bar}bam</div>

foo @if(condition){bar}bam

foo@if(condition){bar} bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span>Foo@if (true) {bar}@else {baz}</span>

<span>Foo@if (true) {bar} @else {baz}</span>

<div>Foo@if (true) {bar}@else {baz}</div>baz

=====================================output=====================================
<span>
  @if (test) {text}
</span>
<div>
  @if (test) {text}
</div>

<span
  >Foo@if (true) {bar}</span
>baz

<span>
  @if (cond) {text} @else {other}
</span>

<span>
  @if (veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongCondition) {bar}
</span>

<span>
  @switch (color) {
    @case ("red") {red}
    @case ("blue") {blue}
    @default {other}
  }
</span>
<div>
  @switch (color) {
    @case ("red") {red}
    @case ("blue") {blue}
    @default {other}
  }
</div>

<span>
  @for (item of items; track item) {{{ item }}} @empty {none}
</span>
<div>
  @for (item of items; track item) {{{ item }}} @empty {none}
</div>

<span>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {loading...}
</span>
<div>
  @defer (on viewport) {
    <heavy-cmp />
  } @placeholder {loading...}
</div>

<span>
  @if (a) {
    @if (b) {nested}
  }
</span>

<span
  >You have {{ count }} item@if (count !== 1) {
    <span>s</span>
  }.</span
>

<span class="cu-billing-ai__column__title"
  >{{ column.title }}@if (column.graySuffix) {
    <span class="gray-suffix">{{ column.graySuffix }}</span>
  }
</span>

<p [id]="labelId" class="field-label">
  {{ label }}@if (isRequired) {
    <span class="required">*</span>
  }
</p>

<span>
  @if (foo) {
    <foo />
  } @else {}
</span>

<span>
  @if (foo) {
  } @else {
    <bar />
  }
</span>

<custom-element>
  @if (cond) {
    <span>text</span>
  } @else {}
</custom-element>

<span
  >{{ item }}@if (!last) {, }
</span>

foo@if (condition) {bar}

foo
@if (condition) {bar}

<div>
  @if (condition) {bar}
</div>

<span>
  @if (condition) {bar}
</span>

@if (condition) {
  <span>bar</span>
}

@if (condition) {
  <span>bar</span>bam
}

@if (condition) {bar}bam

@if (condition) {bar}
<span>bam</span>

@if (condition) {bar}
<div>bam</div>

<div>
  foo@if (true) {bar}bam
</div>

foo
@if (condition) {bar}bam foo@if (condition) {bar}
bam

<a class="logo" href="/">
  @if (branding) {
    <ng-container [ngTemplateOutlet]="customLogo"></ng-container>
  } @else {
    <ng-container [ngTemplateOutlet]="defaultLogo"></ng-container>
  }
</a>

@if (cond) {
  {{ listItem.label }}
} @else {
  {{ other.label }}
}

<span
  >Foo@if (true) {bar} @else {baz}
</span>

<span
  >Foo@if (true) {bar} @else {baz}
</span>

<div>
  Foo@if (true) {bar} @else {baz}
</div>
baz

================================================================================
`;

exports[`defer.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@defer (when isCheckedDefer()) {
<app-c1/>
}
@placeholder {
<span>Placeholder</span>
}
@error {
<span>Error</span>
}
@loading(minimum 1s) {
<span>Loading...</span>
}


@defer (on interaction) {
<span>Clicked</span>
}
@placeholder {
<span>Placeholder (click on it!)</span>
}


@defer (on hover) {
<span>Hovered</span>
}
@placeholder {
<span>Placeholder (hover it!)</span>
}


@defer (on idle) {
<span>Browser has reached an idle state</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on timer(5s)) {
<span>Visible after 5s</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on viewport) {
<app-c2 text="The block entered the viewport"/>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}

=====================================output=====================================
@defer (when isCheckedDefer()) {
  <app-c1 />
} @placeholder {
  <span>Placeholder</span>
} @error {
  <span>Error</span>
} @loading (minimum 1s) {
  <span>Loading...</span>
}

@defer (on interaction) {
  <span>Clicked</span>
} @placeholder {
  <span>Placeholder (click on it!)</span>
}

@defer (on hover) {
  <span>Hovered</span>
} @placeholder {
  <span>Placeholder (hover it!)</span>
}

@defer (on idle) {
  <span>Browser has reached an idle state</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on timer(5s)) {
  <span>Visible after 5s</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on viewport) {
  <app-c2 text="The block entered the viewport" />
} @placeholder {
  <span>Placeholder</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

================================================================================
`;

exports[`defer.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@defer (when isCheckedDefer()) {
<app-c1/>
}
@placeholder {
<span>Placeholder</span>
}
@error {
<span>Error</span>
}
@loading(minimum 1s) {
<span>Loading...</span>
}


@defer (on interaction) {
<span>Clicked</span>
}
@placeholder {
<span>Placeholder (click on it!)</span>
}


@defer (on hover) {
<span>Hovered</span>
}
@placeholder {
<span>Placeholder (hover it!)</span>
}


@defer (on idle) {
<span>Browser has reached an idle state</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on timer(5s)) {
<span>Visible after 5s</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on viewport) {
<app-c2 text="The block entered the viewport"/>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}

=====================================output=====================================
@defer (when isCheckedDefer()) {
  <app-c1 />
} @placeholder {
  <span>Placeholder</span>
} @error {
  <span>Error</span>
} @loading (minimum 1s) {
  <span>Loading...</span>
}

@defer (on interaction) {
  <span>Clicked</span>
} @placeholder {
  <span>Placeholder (click on it!)</span>
}

@defer (on hover) {
  <span>Hovered</span>
} @placeholder {
  <span>Placeholder (hover it!)</span>
}

@defer (on idle) {
  <span>Browser has reached an idle state</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on timer(5s)) {
  <span>Visible after 5s</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on viewport) {
  <app-c2 text="The block entered the viewport" />
} @placeholder {
  <span>Placeholder</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

================================================================================
`;

exports[`defer.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@defer (when isCheckedDefer()) {
<app-c1/>
}
@placeholder {
<span>Placeholder</span>
}
@error {
<span>Error</span>
}
@loading(minimum 1s) {
<span>Loading...</span>
}


@defer (on interaction) {
<span>Clicked</span>
}
@placeholder {
<span>Placeholder (click on it!)</span>
}


@defer (on hover) {
<span>Hovered</span>
}
@placeholder {
<span>Placeholder (hover it!)</span>
}


@defer (on idle) {
<span>Browser has reached an idle state</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on timer(5s)) {
<span>Visible after 5s</span>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on viewport) {
<app-c2 text="The block entered the viewport"/>
}
@placeholder {
<span>Placeholder</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}


@defer (on interaction; prefetch on hover) {
<app-c3/>
}
@placeholder {
<span>Placeholder (hover it, then click on it!)</span>
}

=====================================output=====================================
@defer (when isCheckedDefer()) {
  <app-c1 />
} @placeholder {
  <span>Placeholder</span>
} @error {
  <span>Error</span>
} @loading (minimum 1s) {
  <span>Loading...</span>
}

@defer (on interaction) {
  <span>Clicked</span>
} @placeholder {
  <span>Placeholder (click on it!)</span>
}

@defer (on hover) {
  <span>Hovered</span>
} @placeholder {
  <span>Placeholder (hover it!)</span>
}

@defer (on idle) {
  <span>Browser has reached an idle state</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on timer(5s)) {
  <span>Visible after 5s</span>
} @placeholder {
  <span>Placeholder</span>
}

@defer (on viewport) {
  <app-c2 text="The block entered the viewport" />
} @placeholder {
  <span>Placeholder</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

@defer (on interaction; prefetch on hover) {
  <app-c3 />
} @placeholder {
  <span>Placeholder (hover it, then click on it!)</span>
}

================================================================================
`;

exports[`element-tags.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (true) {<img />}

=====================================output=====================================
@if (true) {
  <img />
}

================================================================================
`;

exports[`element-tags.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (true) {<img />}

=====================================output=====================================
@if (true) {
  <img />
}

================================================================================
`;

exports[`element-tags.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (true) {<img />}

=====================================output=====================================
@if (true) {
  <img />
}

================================================================================
`;

exports[`for.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ul>
@for (
            let

            item of items;index as
i;
            trackBy: trackByFn
) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
<span>The collection is empty</span>
}
</ul>


<li *ngFor="
            let

            item of items;index as
i;
            trackBy: trackByFn
"></li>



<ul>
@for (item of collection; track item.id; let index = $index, first = $first; let last = $last, even = $even, odd = $odd; let count = $count) {

<li><strong>{{item.name}}</strong> index={{index}} first={{first}} last={{last}} even={{even}} odd={{odd}} count={{count}}</li>

}
</ul>

<ul>
@for (item of
 emptyCollection; track item.id;) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
  <span>The collection is empty</span>
}
</ul>
<li *ngFor="
item of
 emptyCollection; track item.id;
"></li>

<div>
  @for ( item of items; track item){
  }

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div *ngFor="item of items; let i = $index; let count = $count; track block"></div>
</div>

=====================================output=====================================
<ul>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>

<li *ngFor="let item of items; index as i; trackBy: trackByFn"></li>

<ul>
  @for (
    item of collection;
    track item.id;
    let index = $index, first = $first;
    let last = $last, even = $even, odd = $odd;
    let count = $count
  ) {
    <li>
      <strong>{{ item.name }}</strong>
      index={{ index }} first={{ first }} last={{ last }} even={{ even }} odd={{
        odd
      }}
      count={{ count }}
    </li>
  }
</ul>

<ul>
  @for (item of emptyCollection; track item.id) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>
<li *ngFor="item of emptyCollection; track item.id"></li>

<div>
  @for (item of items; track item) {}

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div
    *ngFor="item of items; let i = $index; let count = $count; track block"
  ></div>
</div>

================================================================================
`;

exports[`for.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ul>
@for (
            let

            item of items;index as
i;
            trackBy: trackByFn
) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
<span>The collection is empty</span>
}
</ul>


<li *ngFor="
            let

            item of items;index as
i;
            trackBy: trackByFn
"></li>



<ul>
@for (item of collection; track item.id; let index = $index, first = $first; let last = $last, even = $even, odd = $odd; let count = $count) {

<li><strong>{{item.name}}</strong> index={{index}} first={{first}} last={{last}} even={{even}} odd={{odd}} count={{count}}</li>

}
</ul>

<ul>
@for (item of
 emptyCollection; track item.id;) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
  <span>The collection is empty</span>
}
</ul>
<li *ngFor="
item of
 emptyCollection; track item.id;
"></li>

<div>
  @for ( item of items; track item){
  }

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div *ngFor="item of items; let i = $index; let count = $count; track block"></div>
</div>

=====================================output=====================================
<ul>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <li
      ><strong>{{ item.name }}</strong></li
    >
  } @empty {
    <span>The collection is empty</span>
  }
</ul>

<li *ngFor="let item of items; index as i; trackBy: trackByFn"></li>

<ul>
  @for (
    item of collection;
    track item.id;
    let index = $index, first = $first;
    let last = $last, even = $even, odd = $odd;
    let count = $count
  ) {
    <li
      ><strong>{{ item.name }}</strong> index={{ index }} first={{
        first
      }}
      last={{ last }} even={{ even }} odd={{ odd }} count={{ count }}</li
    >
  }
</ul>

<ul>
  @for (item of emptyCollection; track item.id) {
    <li
      ><strong>{{ item.name }}</strong></li
    >
  } @empty {
    <span>The collection is empty</span>
  }
</ul>
<li *ngFor="item of emptyCollection; track item.id"></li>

<div>
  @for (item of items; track item) {}

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div
    *ngFor="item of items; let i = $index; let count = $count; track block"
  ></div>
</div>

================================================================================
`;

exports[`for.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<ul>
@for (
            let

            item of items;index as
i;
            trackBy: trackByFn
) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
<span>The collection is empty</span>
}
</ul>


<li *ngFor="
            let

            item of items;index as
i;
            trackBy: trackByFn
"></li>



<ul>
@for (item of collection; track item.id; let index = $index, first = $first; let last = $last, even = $even, odd = $odd; let count = $count) {

<li><strong>{{item.name}}</strong> index={{index}} first={{first}} last={{last}} even={{even}} odd={{odd}} count={{count}}</li>

}
</ul>

<ul>
@for (item of
 emptyCollection; track item.id;) {
<li><strong>{{item.name}}</strong></li>
}
@empty {
  <span>The collection is empty</span>
}
</ul>
<li *ngFor="
item of
 emptyCollection; track item.id;
"></li>

<div>
  @for ( item of items; track item){
  }

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div *ngFor="item of items; let i = $index; let count = $count; track block"></div>
</div>

=====================================output=====================================
<ul>
  @for (let item of items; index as i; trackBy: trackByFn) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>

<li *ngFor="let item of items; index as i; trackBy: trackByFn"></li>

<ul>
  @for (
    item of collection;
    track item.id;
    let index = $index, first = $first;
    let last = $last, even = $even, odd = $odd;
    let count = $count
  ) {
    <li>
      <strong>{{ item.name }}</strong> index={{ index }} first={{
        first
      }}
      last={{ last }} even={{ even }} odd={{ odd }} count={{ count }}
    </li>
  }
</ul>

<ul>
  @for (item of emptyCollection; track item.id) {
    <li>
      <strong>{{ item.name }}</strong>
    </li>
  } @empty {
    <span>The collection is empty</span>
  }
</ul>
<li *ngFor="item of emptyCollection; track item.id"></li>

<div>
  @for (item of items; track item) {}

  <div *ngFor="item of items; track item"></div>
</div>

<div>
  @for (item of items; let i = $index; track block) {}

  <div *ngFor="item of items; let i = $index; track block"></div>
</div>

<div>
  @for (item of items; let i = $index; let count = $count; track block) {}

  <div
    *ngFor="item of items; let i = $index; let count = $count; track block"
  ></div>
</div>

================================================================================
`;

exports[`if.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<h3>&#64;if and &#64;else</h3>
<div>
<input #checkbox type="checkbox" [checked]="isChecked()" (change)="isChecked.set(checkbox.checked)" id="checkbox"/>
</div>
<div>
@if (isChecked()) {
<span>Checked</span>
}
@else {
<span>Not checked</span>
}
</div>

@if (users$   |   async;   as   users) { {{   users.length   }} }
@else if (users$   |   async;   as   users) { {{   users.length   }} }

<div *ngIf="users$   |   async;   as   users">{{   users.length   }}</div>

@else {}


@if (isDev) {}
@else             if (test) {}

@if      (foo(     "quotes")) {}
@else if (foo(     'quotes')) {}

@if ( widthCategory !== undefined && widthCategory >
topStartToSideStartMaxSize) {
<app-component />
}

@if ( widthCategory; as item) {
}

<div *ngIf="widthCategory; as item"></div>

=====================================output=====================================
<h3>&#64;if and &#64;else</h3>
<div>
  <input
    #checkbox
    type="checkbox"
    [checked]="isChecked()"
    (change)="isChecked.set(checkbox.checked)"
    id="checkbox"
  />
</div>
<div>
  @if (isChecked()) {
    <span>Checked</span>
  } @else {
    <span>Not checked</span>
  }
</div>

@if (users$ | async; as users) {
  {{ users.length }}
} @else if (users$ | async; as users) {
  {{ users.length }}
}

<div *ngIf="users$ | async; as users">{{ users.length }}</div>

@else {}

@if (isDev) {
} @else if (test) {}

@if (foo("quotes")) {
} @else if (foo("quotes")) {}

@if (
  widthCategory !== undefined && widthCategory > topStartToSideStartMaxSize
) {
  <app-component />
}

@if (widthCategory; as item) {}

<div *ngIf="widthCategory; as item"></div>

================================================================================
`;

exports[`if.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<h3>&#64;if and &#64;else</h3>
<div>
<input #checkbox type="checkbox" [checked]="isChecked()" (change)="isChecked.set(checkbox.checked)" id="checkbox"/>
</div>
<div>
@if (isChecked()) {
<span>Checked</span>
}
@else {
<span>Not checked</span>
}
</div>

@if (users$   |   async;   as   users) { {{   users.length   }} }
@else if (users$   |   async;   as   users) { {{   users.length   }} }

<div *ngIf="users$   |   async;   as   users">{{   users.length   }}</div>

@else {}


@if (isDev) {}
@else             if (test) {}

@if      (foo(     "quotes")) {}
@else if (foo(     'quotes')) {}

@if ( widthCategory !== undefined && widthCategory >
topStartToSideStartMaxSize) {
<app-component />
}

@if ( widthCategory; as item) {
}

<div *ngIf="widthCategory; as item"></div>

=====================================output=====================================
<h3>&#64;if and &#64;else</h3>
<div>
  <input
    #checkbox
    type="checkbox"
    [checked]="isChecked()"
    (change)="isChecked.set(checkbox.checked)"
    id="checkbox"
  />
</div>
<div>
  @if (isChecked()) {
    <span>Checked</span>
  } @else {
    <span>Not checked</span>
  }
</div>

@if (users$ | async; as users) {
  {{ users.length }}
} @else if (users$ | async; as users) {
  {{ users.length }}
}

<div *ngIf="users$ | async; as users">{{ users.length }}</div>

@else {}

@if (isDev) {
} @else if (test) {}

@if (foo("quotes")) {
} @else if (foo("quotes")) {}

@if (
  widthCategory !== undefined && widthCategory > topStartToSideStartMaxSize
) {
  <app-component />
}

@if (widthCategory; as item) {}

<div *ngIf="widthCategory; as item"></div>

================================================================================
`;

exports[`if.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<h3>&#64;if and &#64;else</h3>
<div>
<input #checkbox type="checkbox" [checked]="isChecked()" (change)="isChecked.set(checkbox.checked)" id="checkbox"/>
</div>
<div>
@if (isChecked()) {
<span>Checked</span>
}
@else {
<span>Not checked</span>
}
</div>

@if (users$   |   async;   as   users) { {{   users.length   }} }
@else if (users$   |   async;   as   users) { {{   users.length   }} }

<div *ngIf="users$   |   async;   as   users">{{   users.length   }}</div>

@else {}


@if (isDev) {}
@else             if (test) {}

@if      (foo(     "quotes")) {}
@else if (foo(     'quotes')) {}

@if ( widthCategory !== undefined && widthCategory >
topStartToSideStartMaxSize) {
<app-component />
}

@if ( widthCategory; as item) {
}

<div *ngIf="widthCategory; as item"></div>

=====================================output=====================================
<h3>&#64;if and &#64;else</h3>
<div>
  <input
    #checkbox
    type="checkbox"
    [checked]="isChecked()"
    (change)="isChecked.set(checkbox.checked)"
    id="checkbox"
  />
</div>
<div>
  @if (isChecked()) {
    <span>Checked</span>
  } @else {
    <span>Not checked</span>
  }
</div>

@if (users$ | async; as users) {
  {{ users.length }}
} @else if (users$ | async; as users) {
  {{ users.length }}
}

<div *ngIf="users$ | async; as users">{{ users.length }}</div>

@else {}

@if (isDev) {
} @else if (test) {}

@if (foo("quotes")) {
} @else if (foo("quotes")) {}

@if (
  widthCategory !== undefined && widthCategory > topStartToSideStartMaxSize
) {
  <app-component />
}

@if (widthCategory; as item) {}

<div *ngIf="widthCategory; as item"></div>

================================================================================
`;

exports[`ignore.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
} @else {
  Other
}


@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

=====================================output=====================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
}
@else {
  Other
}

@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

================================================================================
`;

exports[`ignore.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
} @else {
  Other
}


@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

=====================================output=====================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
}
@else {
  Other
}

@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

================================================================================
`;

exports[`ignore.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
} @else {
  Other
}


@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

=====================================output=====================================
<!-- prettier-ignore -->
@if (condition) {
  Foo
}
@else {
  Other
}

@if (condition) {
  Foo
}
<!-- prettier-ignore -->
@else {
  Other
}

================================================================================
`;

exports[`mix.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (user.isHuman) {
<human-profile [data]="user" />
} @else if (user.isRobot) {
<!-- robot users are rare, so load their profiles lazily -->
@defer {
<robot-profile [data]="user" />
}
} @else {
<p>The profile is unknown!</p>
}

=====================================output=====================================
@if (user.isHuman) {
  <human-profile [data]="user" />
} @else if (user.isRobot) {
  <!-- robot users are rare, so load their profiles lazily -->
  @defer {
    <robot-profile [data]="user" />
  }
} @else {
  <p>The profile is unknown!</p>
}

================================================================================
`;

exports[`mix.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (user.isHuman) {
<human-profile [data]="user" />
} @else if (user.isRobot) {
<!-- robot users are rare, so load their profiles lazily -->
@defer {
<robot-profile [data]="user" />
}
} @else {
<p>The profile is unknown!</p>
}

=====================================output=====================================
@if (user.isHuman) {
  <human-profile [data]="user" />
} @else if (user.isRobot) {
  <!-- robot users are rare, so load their profiles lazily -->
  @defer {
    <robot-profile [data]="user" />
  }
} @else {
  <p>The profile is unknown!</p>
}

================================================================================
`;

exports[`mix.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@if (user.isHuman) {
<human-profile [data]="user" />
} @else if (user.isRobot) {
<!-- robot users are rare, so load their profiles lazily -->
@defer {
<robot-profile [data]="user" />
}
} @else {
<p>The profile is unknown!</p>
}

=====================================output=====================================
@if (user.isHuman) {
  <human-profile [data]="user" />
} @else if (user.isRobot) {
  <!-- robot users are rare, so load their profiles lazily -->
  @defer {
    <robot-profile [data]="user" />
  }
} @else {
  <p>The profile is unknown!</p>
}

================================================================================
`;

exports[`multiple-switch-cases.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case (   'one')
  @case (     'two') {
    {{                      oneOrTwo()}}
  }
  @case (                  'three') {
    {{   three()}}
  }
}


@switch (expr) {
  @case      (1)
  @case    (2) {
    {{oneOrTwo()                 }}
  }
  @case     (3     )
  @default {
    {{default()                  }}
  }
}

 <div>
      {{message}}
      @switch (value()) {
        @case (         0)                  @case(1            ) {
                                    case 01
        }
        @case (2) {
          case 2
        }
        @default {
          default
        }
      }
    </div>

@switch(a){@default @case(2){<div>default before case</div>}}
@switch(a){@case(1) @case(2){} @case(3) {<div>3</div>}}

@switch(a){@case(1) @case(2) {<!-- comment -->}}

=====================================output=====================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case ("one")
  @case ("two") {
    {{ oneOrTwo() }}
  }
  @case ("three") {
    {{ three() }}
  }
}

@switch (expr) {
  @case (1)
  @case (2) {
    {{ oneOrTwo() }}
  }
  @case (3)
  @default {
    {{ default() }}
  }
}

<div>
  {{ message }}
  @switch (value()) {
    @case (0)
    @case (1) {
      case 01
    }
    @case (2) {
      case 2
    }
    @default {
      default
    }
  }
</div>

@switch (a) {
  @default
  @case (2) {
    <div>default before case</div>
  }
}
@switch (a) {
  @case (1)
  @case (2) {}
  @case (3) {
    <div>3</div>
  }
}

@switch (a) {
  @case (1)
  @case (2) {
    <!-- comment -->
  }
}

================================================================================
`;

exports[`multiple-switch-cases.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case (   'one')
  @case (     'two') {
    {{                      oneOrTwo()}}
  }
  @case (                  'three') {
    {{   three()}}
  }
}


@switch (expr) {
  @case      (1)
  @case    (2) {
    {{oneOrTwo()                 }}
  }
  @case     (3     )
  @default {
    {{default()                  }}
  }
}

 <div>
      {{message}}
      @switch (value()) {
        @case (         0)                  @case(1            ) {
                                    case 01
        }
        @case (2) {
          case 2
        }
        @default {
          default
        }
      }
    </div>

@switch(a){@default @case(2){<div>default before case</div>}}
@switch(a){@case(1) @case(2){} @case(3) {<div>3</div>}}

@switch(a){@case(1) @case(2) {<!-- comment -->}}

=====================================output=====================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case ("one")
  @case ("two") {
    {{ oneOrTwo() }}
  }
  @case ("three") {
    {{ three() }}
  }
}

@switch (expr) {
  @case (1)
  @case (2) {
    {{ oneOrTwo() }}
  }
  @case (3)
  @default {
    {{ default() }}
  }
}

<div>
  {{ message }}
  @switch (value()) {
    @case (0)
    @case (1) {
      case 01
    }
    @case (2) {
      case 2
    }
    @default {
      default
    }
  }
</div>

@switch (a) {
  @default
  @case (2) {
    <div>default before case</div>
  }
}
@switch (a) {
  @case (1)
  @case (2) {}
  @case (3) {
    <div>3</div>
  }
}

@switch (a) {
  @case (1)
  @case (2) {
    <!-- comment -->
  }
}

================================================================================
`;

exports[`multiple-switch-cases.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case (   'one')
  @case (     'two') {
    {{                      oneOrTwo()}}
  }
  @case (                  'three') {
    {{   three()}}
  }
}


@switch (expr) {
  @case      (1)
  @case    (2) {
    {{oneOrTwo()                 }}
  }
  @case     (3     )
  @default {
    {{default()                  }}
  }
}

 <div>
      {{message}}
      @switch (value()) {
        @case (         0)                  @case(1            ) {
                                    case 01
        }
        @case (2) {
          case 2
        }
        @default {
          default
        }
      }
    </div>

@switch(a){@default @case(2){<div>default before case</div>}}
@switch(a){@case(1) @case(2){} @case(3) {<div>3</div>}}

@switch(a){@case(1) @case(2) {<!-- comment -->}}

=====================================output=====================================
<!-- https://github.com/angular/angular/pull/66210 -->

@switch (expr) {
  @case ("one")
  @case ("two") {
    {{ oneOrTwo() }}
  }
  @case ("three") {
    {{ three() }}
  }
}

@switch (expr) {
  @case (1)
  @case (2) {
    {{ oneOrTwo() }}
  }
  @case (3)
  @default {
    {{ default() }}
  }
}

<div>
  {{ message }}
  @switch (value()) {
    @case (0)
    @case (1) {
      case 01
    }
    @case (2) {
      case 2
    }
    @default {
      default
    }
  }
</div>

@switch (a) {
  @default
  @case (2) {
    <div>default before case</div>
  }
}
@switch (a) {
  @case (1)
  @case (2) {}
  @case (3) {
    <div>3</div>
  }
}

@switch (a) {
  @case (1)
  @case (2) {
    <!-- comment -->
  }
}

================================================================================
`;

exports[`switch.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@switch (radioValue()) {
@case (1) {
<span>Case 1</span>
}
@case (2) {
<span>Case 2</span>
}
@default {
<span>Default case (Not 1 or 2)</span>
}
}


@switch(
  should
.be.formatted
) {
  @case(
  should
.be.formatted) {}
}

=====================================output=====================================
@switch (radioValue()) {
  @case (1) {
    <span>Case 1</span>
  }
  @case (2) {
    <span>Case 2</span>
  }
  @default {
    <span>Default case (Not 1 or 2)</span>
  }
}

@switch (should.be.formatted) {
  @case (should.be.formatted) {}
}

================================================================================
`;

exports[`switch.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@switch (radioValue()) {
@case (1) {
<span>Case 1</span>
}
@case (2) {
<span>Case 2</span>
}
@default {
<span>Default case (Not 1 or 2)</span>
}
}


@switch(
  should
.be.formatted
) {
  @case(
  should
.be.formatted) {}
}

=====================================output=====================================
@switch (radioValue()) {
  @case (1) {
    <span>Case 1</span>
  }
  @case (2) {
    <span>Case 2</span>
  }
  @default {
    <span>Default case (Not 1 or 2)</span>
  }
}

@switch (should.be.formatted) {
  @case (should.be.formatted) {}
}

================================================================================
`;

exports[`switch.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@switch (radioValue()) {
@case (1) {
<span>Case 1</span>
}
@case (2) {
<span>Case 2</span>
}
@default {
<span>Default case (Not 1 or 2)</span>
}
}


@switch(
  should
.be.formatted
) {
  @case(
  should
.be.formatted) {}
}

=====================================output=====================================
@switch (radioValue()) {
  @case (1) {
    <span>Case 1</span>
  }
  @case (2) {
    <span>Case 2</span>
  }
  @default {
    <span>Default case (Not 1 or 2)</span>
  }
}

@switch (should.be.formatted) {
  @case (should.be.formatted) {}
}

================================================================================
`;

exports[`unclosed.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@empty{}

@else {}

=====================================output=====================================
@empty {}

@else {}

================================================================================
`;

exports[`unclosed.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@empty{}

@else {}

=====================================output=====================================
@empty {}

@else {}

================================================================================
`;

exports[`unclosed.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@empty{}

@else {}

=====================================output=====================================
@empty {}

@else {}

================================================================================
`;

exports[`with-comment.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>


<!-- comment -->
@if (isChecked()) {
<span>
  Checked
  <!-- comment -->
</span>
} <!-- comment -->
@else {
<span>Not checked</span>
}
<!-- comment -->

=====================================output=====================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>

<!-- comment -->
@if (isChecked()) {
  <span>
    Checked
    <!-- comment -->
  </span>
}
<!-- comment -->
@else {
  <span>Not checked</span>
}
<!-- comment -->

================================================================================
`;

exports[`with-comment.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>


<!-- comment -->
@if (isChecked()) {
<span>
  Checked
  <!-- comment -->
</span>
} <!-- comment -->
@else {
<span>Not checked</span>
}
<!-- comment -->

=====================================output=====================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>

<!-- comment -->
@if (isChecked()) {
  <span>
    Checked
    <!-- comment -->
  </span>
}
<!-- comment -->
@else {
  <span>Not checked</span>
}
<!-- comment -->

================================================================================
`;

exports[`with-comment.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>


<!-- comment -->
@if (isChecked()) {
<span>
  Checked
  <!-- comment -->
</span>
} <!-- comment -->
@else {
<span>Not checked</span>
}
<!-- comment -->

=====================================output=====================================
<div>
  <!-- comment -->
  <span>Not checked</span>
</div>

<!-- comment -->
@if (isChecked()) {
  <span>
    Checked
    <!-- comment -->
  </span>
}
<!-- comment -->
@else {
  <span>Not checked</span>
}
<!-- comment -->

================================================================================
`;
